Expanding the annotations to include relevant ones

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -4,3 +4,10 @@ plugins:
     out: gen/openapi
     opt:
       - enum_type=string
+  - plugin: protoc-gen-connect-openapi
+    path: /Users/Eduardo.Poleo/.asdf/installs/golang/1.23.4/packages/bin/protoc-gen-connect-openapi
+    out: api/
+    opt:
+      - format=yaml
+      - debug
+
